deployment/connection-ms.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: connection-ms
  name: connection-ms
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 30007
  - name: "5005"
    port: 5005
    nodePort: 30008
  selector:
    service: connection-ms
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: connection-ms
  name: connection-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      service: connection-ms
  template:
    metadata:
      labels:
        service: connection-ms
    spec:
      containers:
      - image: hediabed/connection_ms:v1.0.0
        name: connection-ms
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
          - containerPort: 5005
      restartPolicy: Always
