deployment/kafdrop.yaml
apiVersion: v1
kind: Service
metadata:
  name: uda-connect-kafdrop
  labels:
    app: kafdrop
spec:
  type: NodePort
  selector:
    app: kafdrop
  ports:
   - port: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uda-connect-kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
        - name: kafka
          image: obsidiandynamics/kafdrop:3.8.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9000
