deployment/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: uda-connect-kafka
  labels:
    app: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
   - name: port9092
     port: 9092
   - name: port29029
     port: 29092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uda-connect-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9092
            - containerPort: 29092
