deployment/location-event.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: location-events
  name: location-events
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 30005
  - name: "5005"
    port: 5005
    nodePort: 30006
  selector:
    service: location-events
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: location-events
  name: location-events
spec:
  replicas: 1
  selector:
    matchLabels:
      service: location-events
  template:
    metadata:
      labels:
        service: location-events
    spec:
      containers:
      - image: hediabed/location_events:v1.0.1
        name: location-events
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      restartPolicy: Always
