deployment/location-ms.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: location-ms
  name: location-ms
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 30003
  - name: "5005"
    port: 5005
    nodePort: 30004
  selector:
    service: location-ms
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: location-ms
  name: location-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      service: location-ms
  template:
    metadata:
      labels:
        service: location-ms
    spec:
      containers:
      - image: hediabed/location_ms:v1.0.4
        name: location-ms
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
          - containerPort: 5005
      restartPolicy: Always
