deployment/person-ms-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-ms-postgres
  labels:
    app: person-ms-postgres
spec:
  type: ClusterIP
  selector:
    app: person-ms-postgres
  ports:
   - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-ms-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-ms-postgres
  template:
    metadata:
      labels:
        app: person-ms-postgres
    spec:
      containers:
        - name: postgres
          image: postgis/postgis:12-2.5-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: person-ms-postgres-pv-claim
