deployment/person-ms.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: person-ms
  name: person-ms
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 30001
  - name: "5005"
    port: 5005
    nodePort: 30002
  selector:
    service: person-ms
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: person-ms
  name: person-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      service: person-ms
  template:
    metadata:
      labels:
        service: person-ms
    spec:
      containers:
      - image: hediabed/person_ms:v1.0.0
        name: person-ms
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
          - containerPort: 5005
      restartPolicy: Always
