deployment/udaconnect-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-app
  name: udaconnect-app
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 30000
  selector:
    service: udaconnect-app
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: udaconnect-app
  name: udaconnect-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: udaconnect-app
  template:
    metadata:
      labels:
        service: udaconnect-app
    spec:
      volumes:
      - name: config-volume
        configMap: 
          name: udaconnect-app-env
      containers:
      - image: hediabed/udaconnect-app:v1.0.0
        name: udaconnect-app
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /env
          name: config-volume
        resources:
          requests:
            memory: "128Mi"
            cpu: "64m"
          limits:
            memory: "256Mi"
            cpu: "256m"
      restartPolicy: Always
