deployment/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: uda-connect-zookeeper
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
   - port: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uda-connect-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: uda-connect-zookeeper
          image: confluentinc/cp-zookeeper:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 2181
